// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, button: true, compact: false, readOnly: false, theme: dark, additionalInputJssStyle: %s 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  text-indent: 0;
  color: #FBFCFF;
  width: 100%;
  min-width: 2rem;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #88898C;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  padding-inline-end: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #FBFCFF;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #AFB0B3;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(min-width:480px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(min-width:760px) {
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(min-width:1300px) {
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(hover:hover) {
  .wrapper:hover:not(:has(.button:hover, .wrapper input:focus )) {
    border-color: #FBFCFF;
  }
  .label:hover~.wrapper {
    border-color: #FBFCFF;
  }
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, button: true, compact: false, readOnly: false, theme: light, additionalInputJssStyle: %s 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #6B6D70;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  padding-inline-end: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(min-width:480px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(min-width:760px) {
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(min-width:1300px) {
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(hover:hover) {
  .wrapper:hover:not(:has(.button:hover, .wrapper input:focus )) {
    border-color: #010205;
  }
  .label:hover~.wrapper {
    border-color: #010205;
  }
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: false, state: error, button: false, compact: false, readOnly: false, theme: light, additionalInputJssStyle: %s 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #CC1922;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  padding-inline-end: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(hover:hover) {
  .wrapper:hover:not(:has(.button:hover, .wrapper input:focus )) {
    border-color: #951219;
  }
  .label:hover~.wrapper {
    border-color: #951219;
  }
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: false, state: error, button: true, compact: false, readOnly: false, theme: light, additionalInputJssStyle: %s 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #CC1922;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  padding-inline-end: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(hover:hover) {
  .wrapper:hover:not(:has(.button:hover, .wrapper input:focus )) {
    border-color: #951219;
  }
  .label:hover~.wrapper {
    border-color: #951219;
  }
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: false, state: none, button: false, compact: false, readOnly: false, theme: light, additionalInputJssStyle: %s 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #6B6D70;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  padding-inline-end: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(hover:hover) {
  .wrapper:hover:not(:has(.button:hover, .wrapper input:focus )) {
    border-color: #010205;
  }
  .label:hover~.wrapper {
    border-color: #010205;
  }
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: false, state: none, button: true, compact: false, readOnly: false, theme: light, additionalInputJssStyle: %s 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #6B6D70;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  padding-inline-end: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(hover:hover) {
  .wrapper:hover:not(:has(.button:hover, .wrapper input:focus )) {
    border-color: #010205;
  }
  .label:hover~.wrapper {
    border-color: #010205;
  }
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: false, state: none, button: true, compact: false, readOnly: false, theme: light, additionalInputJssStyle: %s 2`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #6B6D70;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  padding-inline-end: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(hover:hover) {
  .wrapper:hover:not(:has(.button:hover, .wrapper input:focus )) {
    border-color: #010205;
  }
  .label:hover~.wrapper {
    border-color: #010205;
  }
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: false, state: success, button: false, compact: false, readOnly: false, theme: light, additionalInputJssStyle: %s 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #197E10;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  padding-inline-end: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(hover:hover) {
  .wrapper:hover:not(:has(.button:hover, .wrapper input:focus )) {
    border-color: #0E4809;
  }
  .label:hover~.wrapper {
    border-color: #0E4809;
  }
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: false, state: success, button: true, compact: false, readOnly: false, theme: light, additionalInputJssStyle: %s 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #197E10;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  padding-inline-end: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(hover:hover) {
  .wrapper:hover:not(:has(.button:hover, .wrapper input:focus )) {
    border-color: #0E4809;
  }
  .label:hover~.wrapper {
    border-color: #0E4809;
  }
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: true, state: error, button: false, compact: false, readOnly: false, theme: light, additionalInputJssStyle: { padding: 0 } 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
  padding: 0;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #CC1922;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  padding-inline-end: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(hover:hover) {
  .wrapper:hover:not(:has(.button:hover, .wrapper input:focus )) {
    border-color: #951219;
  }
  .label:hover~.wrapper {
    border-color: #951219;
  }
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: true, state: error, button: true, compact: false, readOnly: false, theme: light, additionalInputJssStyle: %s 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #CC1922;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  padding-inline-end: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(hover:hover) {
  .wrapper:hover:not(:has(.button:hover, .wrapper input:focus )) {
    border-color: #951219;
  }
  .label:hover~.wrapper {
    border-color: #951219;
  }
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: true, state: none, button: false, compact: false, readOnly: false, theme: light, additionalInputJssStyle: %s 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #6B6D70;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  padding-inline-end: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(hover:hover) {
  .wrapper:hover:not(:has(.button:hover, .wrapper input:focus )) {
    border-color: #010205;
  }
  .label:hover~.wrapper {
    border-color: #010205;
  }
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: true, state: none, button: true, compact: false, readOnly: false, theme: light, additionalInputJssStyle: %s 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #6B6D70;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  padding-inline-end: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(hover:hover) {
  .wrapper:hover:not(:has(.button:hover, .wrapper input:focus )) {
    border-color: #010205;
  }
  .label:hover~.wrapper {
    border-color: #010205;
  }
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: true, state: success, button: false, compact: true, readOnly: true, theme: light, additionalInputJssStyle: { padding: 0 } 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 0.5) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 0.5));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
  padding: 0;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #197E10;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 0.5));
  padding-inline-end: max(2px, 16px * var(--p-internal-input-base-scaling, 0.5));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  cursor: text;
  border-color: #D8D8DB;
  background: #D8D8DB;
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(hover:hover) {
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: false, hideLabel: true, state: success, button: true, compact: true, readOnly: true, theme: light, additionalInputJssStyle: %s 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 0.5) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 0.5));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #197E10;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 0.5));
  padding-inline-end: max(2px, 8px * var(--p-internal-input-base-scaling, 0.5));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  cursor: text;
  border-color: #D8D8DB;
  background: #D8D8DB;
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(hover:hover) {
}
"
`;

exports[`getFunctionalComponentInputBaseStyles() should return correct css for disabled: true, hideLabel: true, state: error, button: false, compact: false, readOnly: false, theme: light, additionalInputJssStyle: %s 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  appearance: none;
  flex: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-base-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  padding-block: max(2px, 8px * var(--p-internal-input-base-scaling, 1));
  text-indent: 0;
  color: #010205;
  width: 100%;
  min-width: 2rem;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  border: 2px solid #CC1922;
  border-radius: 4px;
  padding-inline-start: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  padding-inline-end: max(2px, 16px * var(--p-internal-input-base-scaling, 1));
  display: flex;
  gap: 9px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
.wrapper:has(input:focus:not([readonly])) {
  border-color: #010205;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: not-allowed;
  justify-self: flex-start;
  color: #949598;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(hover:hover) {
}
"
`;
